modules/vpc/main.tf
resource "aws_vpc" "main" {
	cidr_block = var.vpc_cidr
	enable_dns_hostnames = true
	enable_dns_support = true
	tags = {
		Name = "${var.name_prefix}-vpc"
	}
}

resource "aws_internet_gateway" "igw" {
	vpc_id = aws_vpc.main.id
	tags = {
		Name = "${var.name_prefix}-igw"
	}
}

resource "aws_subnet" "public" {
	vpc_id = aws_vpc.main.id
	cidr_block = var.public_subnet_cidr
	map_public_ip_on_launch = true
	availability_zone = var.az
	tags = {
		Name = "${var.name_prefix}-public-subnet"
	}
}

resource "aws_route_table" "public" {
	vpc_id = aws_vpc.main.id
	tags = {
		Name = "${var.name_prefix}-public-rt"
	}
}

resource "aws_route" "internet_access" {
	route_table_id = aws_route_table.public.id
	destination_cidr_block = "0.0.0.0/0"
	gateway_id = aws_internet_gateway.igw.id
}

resource "aws_route_table_association" "public" {
	subnet_id = aws_subnet.public.id
	route_table_id = aws_route_table.public.id
}
